--- a/index.html
+++ b/index.html
@@ -6,24 +6,28 @@
 </head>
 <body>
     <script>
-    let headersList = {
-        "Accept": "*/*",
-        "User-Agent": "Thunder Client (https://www.thunderclient.com)",
-        "Content-Type": "application/json"
+    async function getData(){
+        let headersList = {
+            "Accept": "*/*",
+            "User-Agent": "Thunder Client (https://www.thunderclient.com)",
+            "Content-Type": "application/json"
+        };
+
+        let bodyContent = JSON.stringify({
+            "mac":"4827e2e3b74c"
+        });
+
+        let response = await fetch("https://ifdl.jp/akita/WiScount/getlog.php", { 
+            method: "GET",
+            body: bodyContent,
+            headers: headersList
+        });
+
+        let data = await response.text();
+        console.log(data);
     }
 
-    let bodyContent = JSON.stringify({
-        "mac":"4827e2e3b74c"
-    });
-
-    let response = await fetch("https://ifdl.jp/akita/WiScount/getlog.php", { 
-        method: "GET",
-        body: bodyContent,
-        headers: headersList
-    });
-
-    let data = await response.text();
-    console.log(data);
+    getData();
     </script>
 </body>
 </html>
