--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
 </head>
 <body>
     <script>
-    async function getData(){
+    async function getData() {
         let headersList = {
             "Accept": "*/*",
             "User-Agent": "Thunder Client (https://www.thunderclient.com)",
             "Content-Type": "application/json"
         };
 
-        let bodyContent = JSON.stringify({
-            "mac":"4827e2e3b74c"
-        });
+        let mac = "4827e2e3b74c";
+        let url = `https://ifdl.jp/akita/WiScount/getlog.php?mac=${mac}`;
 
-        let response = await fetch("https://ifdl.jp/akita/WiScount/getlog.php", { 
+        let response = await fetch(url, { 
             method: "GET",
-            body: bodyContent,
             headers: headersList
         });
 
